little restructuring of code and beginning of making and handling exceptions